Fix menu on mobile.

--- a/web/themes/custom/drupalcamp/components/molecules/header/header.css
+++ b/web/themes/custom/drupalcamp/components/molecules/header/header.css
@@ -93,7 +93,8 @@
     background-color: #fff;
     box-shadow: 0 0 10px 0 #00000033;
     position: fixed;
-    right: 0;
+    top: -1rem;
+    right: -20px;
     height: 100vh;
     transform: translateX(100%);
     transition: transform 0.3s ease;
